codex-rs/core/tests/suite/snapshots/all__suite__scenarios__astra_settings_release_check_tool_shapes.snap
---
source: core/tests/suite/scenarios.rs
expression: "context_snapshot::format_request_history_snapshot(\"Astra checks a Settings release using direct collaboration and Code Mode tools.\",\n&mock.requests(),\n&ContextSnapshotOptions::default().include_request_settings(),)"
---
Scenario: Astra checks a Settings release using direct collaboration and Code Mode tools.

## Window 1
Settings:
  include: ["reasoning.encrypted_content"]
  model: "gpt-6-astra"
  parallel_tool_calls: false
  prompt_cache_key: "<PROMPT_CACHE_KEY 1>"
  reasoning: {"context":"all_turns","effort":"low"}
  store: false
  stream: true
  text: {"verbosity":"low"}
  tool_choice: "auto"
-- request 1 (turn) --
00:additional_tools/developer (3; hash=64828fe09df88d01):
        - namespace/functions; hash=aadab8ba2199fda8
          - custom/exec
          - function/wait
        - namespace/clock: Read or wait on time; hash=988ad490c20d3305
          - function/sleep
        - namespace/collaboration: Agent collaboration; hash=940eda70c563c144
          - function/followup_task
          - function/interrupt_agent
          - function/list_agents
          - function/send_message
          - function/spawn_agent
01:message/developer:
    Complete the request. Questions only for missing information that changes the work

    Follow applicable AGENTS.md instructions. Supplied ancestors need no rereading. Nested instructions: check where you work

    Preserve unrelated uncommitted changes. Destructive Git commands only with explicit approval

    Active sandbox and approval policy. No bypasses or repackaged rejected commands

02:message/developer[2]:
    [01] <permissions instructions>
        `sandbox_mode`: `danger-full-access`. No filesystem sandbox. Network access: enabled.
        Approval policy: `never`. Do not set `sandbox_permissions`.
        </permissions instructions>
    [02] <collaboration_mode>Execute the request. Prior collaboration-mode instructions replaced. Mode changes only through a developer `<collaboration_mode>` message

        `request_user_input`, when available: optional questions that materially improve the work, never approva...ocking safe progress: one concise plain-text question [hash=291e336ce1657280]
        </collaboration_mode>
03:message/developer:
    <multi_agent_role>Role: `/root`. Own the result and coordinate delegated work. Agent messages in analysi... active agent, no new turn. `followup_task`: new turn [hash=98e3a9369209aed0]
    Collaboration tools: direct calls, not inside `functions.exec`. Shared filesystem and working directory....less stopped or shut down. Do not poll for completion [hash=76b09020695c57df]
    Active-agent limit, including you: 4

    `model` or `reasoning_effort`: only when explicitly requested by the user, AGENTS.md, or skills. Overrid... parent model and effort inherited</multi_agent_role> [hash=4692806a8a393d2c]
04:message/developer:
    <multi_agent_mode>Proactive-delegation guidance replaced. Agent spawning only on explicit request from t...le AGENTS.md or skill instructions</multi_agent_mode> [hash=2474ee6b5769b670]
05:message/user:
    <environment_context>
      <cwd><CWD></cwd>
      <shell><HOST_SHELL></shell>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
      <filesystem><workspace_roots><root><WORKSPACE_ROOT 1></root></workspace_roots><permission_profile type...e="unrestricted" /></permission_profile></filesystem> [hash=0592734c170299c1]
    </environment_context>
06:message/user:
    Check the Settings release. Read release/diagnostics.log, inspect release/settings.png, confirm the loca...ell me whether another agent is working on this task. [hash=aa221f7aaa101eb2]
-- request 2 (turn) --
07:function_call/collaboration.list_agents:{}
08:function_call_output:{"agents":[{"agent_name":"/root","agent_status":"running"}]}
-- request 3 (turn) --
09:custom_tool_call/exec:const [log, ping] = await Promise.all([
      tools.exec_command({ cmd: "cat release/diagnostics.log", login: false, max_output_tokens: 4000 }),
      tools.mcp__rmcp__echo({ message: "settings-release-check" }),
    ]);
    text(`diagnostics:\\n${log.output}`);
    text(`MCP: ${ping.structuredContent?.echo ?? "missing"}`);
10:custom_tool_call_output:diagnostics:
    UI-42: expected Settings button label: Apply
    diagnostic 001: rendering settings panel
    diagnostic 002: rendering settings panel
    diagnostic 003: rendering settings panel
    diagnostic 004: rendering settings panel
    diagnostic 005: rendering settings panel
    diagnostic 006: rendering settings panel
    <OMITTED 107 LINES; ~1096 TOKENS; hash=ca54f6a7833e6909>
    diagnostic 114: rendering settings panel
    diagnostic 115: rendering settings panel
    diagnostic 116: rendering settings panel
    diagnostic 117: rendering settings panel
    diagnostic 118: rendering settings panel
    diagnostic 119: rendering settings panel
    diagnostic 120: rendering settings panel
    UI-42: observed Settings button label: Save | MCP: ECHOING: settings-release-check
-- request 4 (turn) --
11:custom_tool_call/exec:image(await tools.view_image({ path: "release/settings.png", detail: "original" }));
12:custom_tool_call_output:<input_image>
-- request 5 (turn) --
13:custom_tool_call/exec:text(await tools.apply_patch(`*** Begin Patch
    *** Update File: release/status.md
    @@
    -Status: pending
    +Status: blocked
    +Reason: expected Apply; observed Save
    +MCP: reachable
    *** End Patch
    `));
14:custom_tool_call_output:{}
-- request 6 (turn) --
15:custom_tool_call/exec:text((await tools.exec_command({ cmd: "cat release/status.md", login: false })).output);
16:custom_tool_call_output:Status: blocked
    Reason: expected Apply; observed Save
    MCP: reachable
