codex-rs/core/tests/suite/snapshots/all__suite__scenarios__code_mode_catalog_messages_ranked_search.snap
---
source: core/tests/suite/scenarios.rs
expression: "context_snapshot::format_request_history_snapshot(scenario, &requests,\n&ContextSnapshotOptions::default().include_request_settings(),)"
---
Scenario: Ranked search prints a deferred tool declaration before a later code cell invokes it, yields, and completes through wait.

## Window 1
Settings:
  include: ["reasoning.encrypted_content"]
  model: "gpt-6-astra"
  parallel_tool_calls: true
  prompt_cache_key: "<PROMPT_CACHE_KEY 1>"
  reasoning: {"effort":"low"}
  store: false
  stream: true
  text: {"verbosity":"low"}
  tool_choice: "auto"
  tools (5; hash=be0b6c588a7d8755):
    - custom/exec: Catalog exec instructions. Default yield: 1234 ms. image(dataUrl | { image_url, detail? } | Image...; hash=c8dfeed5c5e701b6
    - function/wait: Catalog wait instructions: resume the yielded cell.; args=[cell_id, max_tokens, terminate, yield_time_ms]; hash=67bc0f04da3505b3
    - namespace/clock: Read or wait on time; hash=988ad490c20d3305
      - function/sleep
    - namespace/collaboration: Agent collaboration; hash=940eda70c563c144
      - function/followup_task
      - function/interrupt_agent
      - function/list_agents
      - function/send_message
      - function/spawn_agent
    - web_search; hash=e214d4db1bc49e89
-- request 1 (turn) --
00:message/developer:
    Complete the request. Questions only for missing information that changes the work

    Follow applicable AGENTS.md instructions. Supplied ancestors need no rereading. Nested instructions: check where you work

    Preserve unrelated uncommitted changes. Destructive Git commands only with explicit approval

    Active sandbox and approval policy. No bypasses or repackaged rejected commands

01:message/developer[2]:
    [01] <permissions instructions>
        `sandbox_mode`: `danger-full-access`. No filesystem sandbox. Network access: enabled.
        Approval policy: `never`. Do not set `sandbox_permissions`.
        </permissions instructions>
    [02] <collaboration_mode>Execute the request. Prior collaboration-mode instructions replaced. Mode changes only through a developer `<collaboration_mode>` message

        `request_user_input`, when available: optional questions that materially improve the work, never approva...ocking safe progress: one concise plain-text question [hash=291e336ce1657280]
        </collaboration_mode>
02:message/developer:
    <multi_agent_role>Role: `/root`. Own the result and coordinate delegated work. Agent messages in analysi... active agent, no new turn. `followup_task`: new turn [hash=98e3a9369209aed0]
    Collaboration tools: direct calls, not inside `functions.exec`. Shared filesystem and working directory....less stopped or shut down. Do not poll for completion [hash=76b09020695c57df]
    Active-agent limit, including you: 4

    `model` or `reasoning_effort`: only when explicitly requested by the user, AGENTS.md, or skills. Overrid... parent model and effort inherited</multi_agent_role> [hash=4692806a8a393d2c]
03:message/developer:
    <multi_agent_mode>Proactive-delegation guidance replaced. Agent spawning only on explicit request from t...le AGENTS.md or skill instructions</multi_agent_mode> [hash=2474ee6b5769b670]
04:message/user:
    <environment_context>
      <cwd><CWD></cwd>
      <shell><HOST_SHELL></shell>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
      <filesystem><workspace_roots><root><CWD></root></workspace_roots><permission_profile type="disabled"><...e="unrestricted" /></permission_profile></filesystem> [hash=d40b2f45cb028888]
    </environment_context>
05:message/user:
    Find calendar timezone option 99, call it with UTC, then yield and wait for completion.
-- request 2 (turn) --
06:custom_tool_call/exec:const result = await tools.tool_search({query: "calendar_timezone_option_99", limit: 1});
    store("calendarToolName", result.tools[0].name);
    text(result.tools[0].name);
    text(result.tools[0].description);
07:custom_tool_call_output:mcp__codex_apps__calendar_timezone_option_99 | Plan events and manage your calendar.

    Read timezone option 99.

    exec tool declaration:
    ```ts
    declare const tools: { mcp__codex_apps__calendar_timezone_option_99(args: { timezone?: string; }): Promise<CallToolResult>; };
    ```
    <OMITTED 76 LINES; ~426 TOKENS; hash=8122adfbe3dbbca8>
    type CallToolResult<TStructured = { [key: string]: unknown }> = {
      _meta?: MetaObject;
      content: ContentBlock[];
      isError?: boolean;
      structuredContent?: TStructured;
      [key: string]: unknown;
    };
    ```
-- request 3 (turn) --
08:custom_tool_call/exec:const name = load("calendarToolName");
    text((await tools[name]({ timezone: "UTC" })).content[0].text);
    text('started'); yield_control(); text('finished');
09:custom_tool_call_output:Script running with cell ID 2
     | called calendar_timezone_option_99 for  at  with | started
-- request 4 (turn) --
10:function_call/functions.wait:{"cell_id":"2"}
11:function_call_output:finished
