codex-rs/core/tests/suite/snapshots/all__suite__scenarios__code_mode_mcp_schema_limits.snap
---
source: core/tests/suite/scenarios.rs
expression: "context_snapshot::format_request_history_snapshot(\"Code Mode exposes explicit MCP schema limits in its prompt and runtime tool catalog.\",\n&requests,\n&ContextSnapshotOptions::default().rewrite_known_segments().include_request_settings(),)"
---
Scenario: Code Mode exposes explicit MCP schema limits in its prompt and runtime tool catalog.

## Window 1
Settings:
  include: ["reasoning.encrypted_content"]
  model: "gpt-5.4"
  parallel_tool_calls: true
  prompt_cache_key: "<PROMPT_CACHE_KEY 1>"
  reasoning: {"effort":"medium"}
  store: false
  stream: true
  text: {"verbosity":"low"}
  tool_choice: "auto"
  tools (3; hash=4b6cb3c8d36aa86a):
    - custom/exec: Fresh restricted JavaScript. Source only, no JSON or fences. No console, imports, filesystem, net...; hash=4903ff8cb30e5e51
    - function/wait: Resume or terminate a yielded exec cell; args=[cell_id, max_tokens, terminate, yield_time_ms]; hash=bdd3586ca3655cd2
    - web_search; hash=e214d4db1bc49e89
-- request 1 (turn) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    inspect the search tool declarations
-- request 2 (turn) --
04:custom_tool_call/exec:
    const results = ["default_schema", "expanded_schema"].map(server => {
      const description = ALL_TOOLS.find(({name}) => name === `mcp__${server}__search`)?.description ?? "";
      const [declaration, schema] = description.split("\\n\\nInput schema: ");
      return [declaration.includes("budget_description_marker"), declaration.includes("query: string;"), schema.includes("budget_description_marker")];
    });
    const shared = ALL_TOOLS.find(({name}) => name === "mcp__default_schema__shared")?.description ?? "";
    const [sharedDeclaration, sharedSchema] = shared.split("\\n\\nInput schema: ");
    results.push([sharedDeclaration.includes("code_mode_description_marker"), sharedDeclaration.includes("te...redSchema.includes("code_mode_description_marker")]); [hash=cd158dada91d48e9]
    text(JSON.stringify(results));
05:custom_tool_call_output:[[false,true,false],[true,true,true],[true,true,true]]
